deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ce-smart-career-frontend-prd
  namespace: ce-smart-career
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: ce-smart-career-frontend-prd
