deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ce-smart-career-frontend-prd
  namespace: ce-smart-career
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - career.ktyhon.online
    secretName: 
  rules:
  - host: "career.ktyhon.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ce-smart-career-frontend-prd
            port:
              number: 3000
